# src/routes/doc.swagger.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "API Escola",
-    "description": "Uma API de exemplo com o básico de express",
+    "title": "Nature365",
+    "description": "API Rest para o projeto final do módulo 1 do #FloripaMaisTec",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
@@ -19,51 +19,44 @@
     }
   },
   "paths": {
-    "/alunos/": {
+    "/usuarios/": {
       "post": {
         "tags": [
-          "Aluno"
+          "Usuario"
         ],
         "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
-            "description": "Adiciona um novo Aluno",
             "schema": {
               "type": "object",
               "properties": {
                 "email": {
-                  "type": "string",
-                  "example": "teste123@gmail.com"
+                  "example": "any"
                 },
                 "password": {
-                  "type": "string",
-                  "example": "teste123"
+                  "example": "any"
                 },
                 "nome": {
-                  "type": "string",
-                  "example": "Novo Aluno"
+                  "example": "any"
+                },
+                "sexo": {
+                  "example": "any"
+                },
+                "CPF": {
+                  "example": "any"
                 },
                 "data_nascimento": {
-                  "type": "string",
-                  "example": "1996-12-15"
+                  "example": "any"
                 },
                 "celular": {
-                  "type": "string",
-                  "example": "48 9 9999 9999"
+                  "example": "any"
                 },
                 "cep": {
-                  "type": "string",
-                  "example": "88117410"
+                  "example": "any"
                 }
-              },
-              "required": [
-                "email",
-                "password",
-                "nome",
-                "cep"
-              ]
+              }
             }
           }
         ],
@@ -80,6 +73,9 @@
         }
       },
       "get": {
+        "tags": [
+          "Usuario"
+        ],
         "description": "",
         "parameters": [
           {
@@ -98,8 +94,11 @@
         }
       }
     },
-    "/alunos/{id}": {
+    "/usuarios/{id}": {
       "get": {
+        "tags": [
+          "Usuario"
+        ],
         "description": "",
         "parameters": [
           {
@@ -128,65 +127,22 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/cursos/": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "nome": {
-                  "example": "any"
-                },
-                "duracao_horas": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
       },
-      "get": {
+      "put": {
+        "tags": [
+          "Usuario"
+        ],
         "description": "",
         "parameters": [
           {
-            "name": "duracao_horas",
-            "in": "query",
+            "name": "id",
+            "in": "path",
+            "required": true,
             "type": "string"
           },
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "nome",
-            "in": "query",
-            "description": "Filtrar um curso pelo nome",
             "type": "string"
           }
         ],
@@ -197,15 +153,19 @@
           "401": {
             "description": "Unauthorized"
           },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/cursos/{id}": {
+      },
       "delete": {
-        "description": "",
+        "tags": [
+          "Usuario"
+        ],
+        "description": "Exclui um usuário pelo ID fornecido.",
         "parameters": [
           {
             "name": "id",
@@ -226,9 +186,94 @@
           "401": {
             "description": "Unauthorized"
           }
+        },
+        "security": []
+      }
+    },
+    "/locais/": {
+      "post": {
+        "tags": [
+          "Local"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id_usuario": {
+                  "example": "any"
+                },
+                "nome_rota": {
+                  "example": "any"
+                },
+                "descricao": {
+                  "example": "any"
+                },
+                "localizacao": {
+                  "example": "any"
+                },
+                "cep": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         }
       },
-      "put": {
+      "get": {
+        "tags": [
+          "Local"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "nome",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "duracao_horas",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/locais/{id}": {
+      "get": {
+        "tags": [
+          "Local"
+        ],
         "description": "",
         "parameters": [
           {
@@ -252,23 +297,97 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/login/bem_vindo": {
-      "get": {
+      },
+      "delete": {
+        "tags": [
+          "Local"
+        ],
         "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Local"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id_usuario": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/login/teste/{cep}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Login"
+        ],
+        "description": "Busca informações de endereço com base no CEP fornecido.",
         "parameters": [
           {
             "name": "cep",
@@ -281,15 +400,21 @@
           "200": {
             "description": "OK"
           },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/login/map/{cep}": {
+    "/login/{cep}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Login"
+        ],
+        "description": "Busca informações de endereço com base no CEP fornecido.",
         "parameters": [
           {
             "name": "cep",
@@ -313,7 +438,163 @@
     },
     "/login/": {
       "post": {
-        "description": "",
+        "tags": [
+          "Login"
+        ],
+        "description": "Autenticação de usuário.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/login/map/teste/{cep}": {
+      "get": {
+        "tags": [
+          "Login"
+        ],
+        "description": "Busca informações de endereço com base no CEP fornecido.",
+        "parameters": [
+          {
+            "name": "cep",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/login/map/{cep}": {
+      "get": {
+        "tags": [
+          "Login"
+        ],
+        "description": "Busca informações de endereço com base no CEP fornecido.",
+        "parameters": [
+          {
+            "name": "cep",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/login/map/": {
+      "post": {
+        "tags": [
+          "Login"
+        ],
+        "description": "Autenticação de usuário.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/login/teste/teste/{cep}": {
+      "get": {
+        "tags": [
+          "Login"
+        ],
+        "description": "Busca informações de endereço com base no CEP fornecido.",
+        "parameters": [
+          {
+            "name": "cep",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/login/teste/": {
+      "post": {
+        "tags": [
+          "Login"
+        ],
+        "description": "Autenticação de usuário.",
         "parameters": [
           {
             "name": "body",
